--- a/package.json
+++ b/package.json
@@ -13,96 +13,101 @@
     "test": "jest"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
+    "@hookform/resolvers": "^5.1.1",
+    "@icons-pack/react-simple-icons": "^13.1.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/bundle-analyzer": "15.3.2",
-    "@next/env": "15.3.2",
-    "@next/mdx": "15.3.2",
-    "@radix-ui/react-accordion": "^1.2.10",
-    "@radix-ui/react-collapsible": "^1.1.10",
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-navigation-menu": "^1.2.12",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.2.6",
-    "@radix-ui/react-visually-hidden": "^1.2.2",
+    "@microflash/rehype-figure": "^2.1.4",
+    "@next/bundle-analyzer": "15.3.4",
+    "@next/env": "15.3.4",
+    "@next/mdx": "15.3.4",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@react-three/fiber": "^9.1.2",
-    "@shikijs/rehype": "^3.4.1",
+    "@shikijs/rehype": "^3.7.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
-    "@types/three": "^0.176.0",
+    "@types/three": "^0.177.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "feed": "^5.0.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "feed": "^5.1.0",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.22",
-    "lucide-react": "^0.510.0",
-    "mermaid": "^11.6.0",
-    "motion": "^12.11.3",
+    "lucide-react": "^0.518.0",
+    "mermaid": "^11.7.0",
+    "motion": "^12.18.1",
     "natsort": "^2.0.3",
-    "next": "15.3.2",
+    "next": "15.3.4",
     "next-image-export-optimizer": "^1.19.0",
     "next-mdx-remote": "^5.0.0",
-    "next-seo": "^6.6.0",
+    "next-seo": "^6.8.0",
     "next-themes": "^0.4.6",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.56.3",
-    "react-responsive-carousel": "^3.2.23",
+    "react-hook-form": "^7.58.1",
     "rehype-katex": "^7.0.1",
     "rehype-react": "^8.0.0",
     "remark-gfm": "^4.0.1",
     "remark-hint": "^1.0.10",
     "remark-math": "^6.0.0",
     "remark-rehype": "^11.1.2",
-    "sharp": "^0.34.1",
-    "shiki": "^3.4.1",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0",
+    "sharp": "^0.34.2",
+    "shiki": "^3.7.0",
+    "simple-icons": "^15.2.0",
+    "sonner": "^2.0.5",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.176.0",
+    "three": "^0.177.0",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
-    "webpack": "^5.99.8",
-    "zod": "^3.24.4"
+    "webpack": "^5.99.9",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@eslint/js": "^9.26.0",
-    "@next/eslint-plugin-next": "^15.3.2",
-    "@tailwindcss/postcss": "^4.1.6",
+    "@eslint/js": "^9.29.0",
+    "@mdx-js/language-service": "^0.7.1",
+    "@next/eslint-plugin-next": "^15.3.4",
+    "@tailwindcss/postcss": "^4.1.10",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.15.18",
-    "@types/react": "19.1.4",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.3",
+    "@types/react": "19.1.8",
     "@types/remark-hint": "^1.0.6",
     "@types/uuid": "^10.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.26.0",
+    "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-compiler": "19.1.0-rc.1",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.1.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "memfs": "^4.17.1",
-    "postcss": "^8.5.3",
+    "globals": "^16.2.0",
+    "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
+    "memfs": "^4.17.2",
+    "postcss": "^8.5.6",
     "prettier": "3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^4.1.6",
-    "tw-animate-css": "^1.2.9",
+    "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1"
+    "typescript-eslint": "^8.34.1"
   },
   "author": "Jonas Schneider (https://github.com/jonsch318)",
-  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
