--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
 		"feed": "^5.1.0",
 		"gray-matter": "^4.0.3",
 		"katex": "^0.16.22",
-		"lucide-react": "^0.540.0",
-		"mermaid": "^11.10.0",
+		"lucide-react": "^0.541.0",
+		"mermaid": "^11.10.1",
 		"motion": "^12.23.12",
 		"natsort": "^2.0.3",
 		"next": "15.5.0",
@@ -60,11 +60,15 @@
 		"react": "19.1.1",
 		"react-dom": "19.1.1",
 		"react-hook-form": "^7.62.0",
+		"rehype-document": "^7.0.3",
 		"rehype-katex": "^7.0.1",
 		"rehype-react": "^8.0.0",
+		"rehype-slug": "^6.0.0",
+		"rehype-stringify": "^10.0.1",
 		"remark-gfm": "^4.0.1",
 		"remark-hint": "^1.0.10",
 		"remark-math": "^6.0.0",
+		"remark-parse": "^11.0.0",
 		"remark-rehype": "^11.1.2",
 		"sharp": "^0.34.3",
 		"shiki": "^3.11.0",
@@ -78,11 +82,11 @@
 		"uuid": "^11.1.0",
 		"vaul": "^1.1.2",
 		"webpack": "^5.101.3",
-		"zod": "^4.0.17"
+		"zod": "^4.1.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.2.0",
-		"@eslint/js": "^9.33.0",
+		"@biomejs/biome": "2.2.2",
+		"@eslint/js": "^9.34.0",
 		"@mdx-js/language-service": "^0.7.2",
 		"@next/eslint-plugin-next": "^15.5.0",
 		"@tailwindcss/postcss": "^4.1.12",
@@ -91,14 +95,14 @@
 		"@testing-library/react": "^16.3.0",
 		"@types/jest": "^30.0.0",
 		"@types/node": "^24.3.0",
-		"@types/react": "19.1.10",
+		"@types/react": "19.1.11",
 		"@types/remark-hint": "^1.0.6",
 		"@types/uuid": "^10.0.0",
 		"cross-env": "^10.0.0",
 		"globals": "^16.3.0",
 		"jest": "^30.0.5",
 		"jest-environment-jsdom": "^30.0.5",
-		"memfs": "^4.36.3",
+		"memfs": "^4.37.1",
 		"postcss": "^8.5.6",
 		"rimraf": "^6.0.1",
 		"tailwindcss": "^4.1.12",
