--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build-stats": "cross-env ANALYZE=true npm run build",
 		"lint": "biome check",
 		"lint:fix": "biome check --write",
-		"format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
+		"format": "biome format --write",
 		"check-types": "tsc --noEmit --pretty",
 		"test": "jest"
 	},
@@ -99,6 +99,7 @@
 		"@types/remark-hint": "^1.0.6",
 		"@types/uuid": "^10.0.0",
 		"cross-env": "^10.0.0",
+		"extend-expect": "link:@testing-library/jest-dom/extend-expect",
 		"globals": "^16.3.0",
 		"jest": "^30.0.5",
 		"jest-environment-jsdom": "^30.0.5",
@@ -106,6 +107,7 @@
 		"postcss": "^8.5.6",
 		"rimraf": "^6.0.1",
 		"tailwindcss": "^4.1.12",
+		"ts-node": "^10.9.2",
 		"tw-animate-css": "^1.3.7",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.40.0"
