--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@radix-ui/react-visually-hidden": "^1.2.3",
 		"@react-three/fiber": "^9.3.0",
-		"@shikijs/rehype": "^3.12.0",
+		"@shikijs/rehype": "^3.12.2",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/mdx": "^2.0.13",
-		"@types/three": "^0.179.0",
+		"@types/three": "^0.180.0",
 		"@types/unist": "^3.0.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -48,7 +48,7 @@
 		"gray-matter": "^4.0.3",
 		"katex": "^0.16.22",
 		"lucide-react": "^0.542.0",
-		"mermaid": "^11.10.1",
+		"mermaid": "^11.11.0",
 		"motion": "^12.23.12",
 		"natsort": "^2.0.3",
 		"next": "15.5.2",
@@ -71,45 +71,42 @@
 		"remark-parse": "^11.0.0",
 		"remark-rehype": "^11.1.2",
 		"sharp": "^0.34.3",
-		"shiki": "^3.12.0",
-		"simple-icons": "^15.12.0",
+		"shiki": "^3.12.2",
+		"simple-icons": "^15.14.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss-animate": "^1.0.7",
-		"three": "^0.179.1",
+		"three": "^0.180.0",
 		"unified": "^11.0.5",
 		"unist-builder": "^4.0.0",
-		"uuid": "^11.1.0",
+		"uuid": "^12.0.0",
 		"vaul": "^1.1.2",
 		"webpack": "^5.101.3",
 		"zod": "^4.1.5"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.2.2",
-		"@eslint/js": "^9.34.0",
+		"@biomejs/biome": "2.2.3",
 		"@mdx-js/language-service": "^0.7.2",
-		"@next/eslint-plugin-next": "^15.5.2",
-		"@tailwindcss/postcss": "^4.1.12",
+		"@tailwindcss/postcss": "^4.1.13",
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/jest-dom": "^6.8.0",
 		"@testing-library/react": "^16.3.0",
 		"@types/jest": "^30.0.0",
-		"@types/node": "^24.3.0",
+		"@types/node": "^24.3.1",
 		"@types/react": "19.1.12",
 		"@types/remark-hint": "^1.0.6",
 		"@types/uuid": "^10.0.0",
 		"cross-env": "^10.0.0",
 		"globals": "^16.3.0",
-		"jest": "^30.1.1",
-		"jest-environment-jsdom": "^30.1.1",
+		"jest": "^30.1.3",
+		"jest-environment-jsdom": "^30.1.2",
 		"memfs": "^4.38.2",
 		"postcss": "^8.5.6",
 		"rimraf": "^6.0.1",
-		"tailwindcss": "^4.1.12",
+		"tailwindcss": "^4.1.13",
 		"ts-node": "^10.9.2",
-		"tw-animate-css": "^1.3.7",
-		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.41.0"
+		"tw-animate-css": "^1.3.8",
+		"typescript": "^5.9.2"
 	},
 	"author": "Jonas Schneider (https://github.com/jonsch318)",
 	"packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
