--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"@radix-ui/react-slot": "^1.2.4",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@radix-ui/react-visually-hidden": "^1.2.4",
-		"@react-three/fiber": "^9.4.2",
+		"@react-three/fiber": "^9.5.0",
 		"@shikijs/rehype": "^3.20.0",
 		"@tailwindcss/typography": "^0.5.19",
 		"@types/mdx": "^2.0.13",
@@ -55,14 +55,14 @@
 		"motion": "^12.23.26",
 		"natsort": "^2.0.3",
 		"next": "16.0.10",
-		"next-image-export-optimizer": "^1.19.0",
+		"next-image-export-optimizer": "^1.20.1",
 		"next-mdx-remote": "^5.0.0",
 		"next-seo": "^7.0.1",
 		"next-themes": "^0.4.6",
 		"prop-types": "^15.8.1",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
-		"react-hook-form": "^7.68.0",
+		"react-hook-form": "^7.69.0",
 		"rehype-document": "^7.0.3",
 		"rehype-katex": "^7.0.1",
 		"rehype-react": "^8.0.0",
@@ -75,7 +75,7 @@
 		"remark-rehype": "^11.1.2",
 		"sharp": "^0.34.5",
 		"shiki": "^3.20.0",
-		"simple-icons": "^16.2.0",
+		"simple-icons": "^16.3.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss-animate": "^1.0.7",
@@ -84,8 +84,8 @@
 		"unist-builder": "^4.0.0",
 		"uuid": "^13.0.0",
 		"vaul": "^1.1.2",
-		"webpack": "^5.103.0",
-		"zod": "^4.1.13"
+		"webpack": "^5.104.1",
+		"zod": "^4.3.4"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
@@ -93,9 +93,9 @@
 		"@tailwindcss/postcss": "^4.1.18",
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/jest-dom": "^6.9.1",
-		"@testing-library/react": "^16.3.0",
+		"@testing-library/react": "^16.3.1",
 		"@types/jest": "^30.0.0",
-		"@types/node": "^25.0.2",
+		"@types/node": "^25.0.3",
 		"@types/react": "19.2.7",
 		"@types/remark-hint": "^1.0.6",
 		"cross-env": "^10.1.0",
@@ -103,6 +103,7 @@
 		"jest": "^30.2.0",
 		"jest-environment-jsdom": "^30.2.0",
 		"memfs": "^4.51.1",
+		"node-gyp": "^12.1.0",
 		"postcss": "^8.5.6",
 		"rimraf": "^6.1.2",
 		"tailwindcss": "^4.1.18",
@@ -111,5 +112,5 @@
 		"typescript": "^5.9.3"
 	},
 	"author": "Jonas Schneider (https://github.com/jonsch318)",
-	"packageManager": "pnpm@10.24.0+sha512.01ff8ae71b4419903b65c60fb2dc9d34cf8bb6e06d03bde112ef38f7a34d6904c424ba66bea5cdcf12890230bf39f9580473140ed9c946fef328b6e5238a345a"
+	"packageManager": "pnpm@11.0.0-dev.1005+sha512.91f84a392eea348ea4852a182912d2520273a4336f933b78cc44bc931eb999923c097e9433a9b355adc1f725725ea99082fc9f032a559df832632e764c92c798"
 }
